// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disables save if isSaveDisabled is true 1`] = `
Array [
  <div
    className="listname"
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        List Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="listname"
            name="listname"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </div>,
  <div
    className="visibility"
  >
    <div
      className="root"
    >
      <label
        className="root"
      >
        <input
          checked={true}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="PRIVATE"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          <span>
            Private
          </span>
        </span>
      </label>
      <label
        className="root"
      >
        <input
          checked={false}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="PUBLIC"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          <span>
            Public
          </span>
        </span>
      </label>
    </div>
    <p
      className="root"
    />
  </div>,
  <div
    className="actions"
  >
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[MockFunction]}
      type="reset"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={true}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Save
      </span>
    </button>
  </div>,
]
`;

exports[`renders the correct tree 1`] = `
Array [
  <div
    className="listname"
  >
    <div
      className="root"
    >
      <label
        className="label"
      >
        List Name
      </label>
      <span
        className="root"
        style={
          Object {
            "--iconsAfter": 0,
            "--iconsBefore": 0,
          }
        }
      >
        <span
          className="input"
        >
          <input
            className="input"
            id="listname"
            name="listname"
            onBlur={[Function]}
            onChange={[Function]}
            value=""
          />
        </span>
        <span
          className="before"
        />
        <span
          className="after"
        />
      </span>
      <p
        className="root"
      />
    </div>
  </div>,
  <div
    className="visibility"
  >
    <div
      className="root"
    >
      <label
        className="root"
      >
        <input
          checked={true}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="PRIVATE"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          <span>
            Private
          </span>
        </span>
      </label>
      <label
        className="root"
      >
        <input
          checked={false}
          className="input"
          onBlur={[Function]}
          onChange={[Function]}
          type="radio"
          value="PUBLIC"
        />
        <span
          className="icon"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
          </svg>
        </span>
        <span
          className="label"
        >
          <span>
            Public
          </span>
        </span>
      </label>
    </div>
    <p
      className="root"
    />
  </div>,
  <div
    className="actions"
  >
    <button
      className="root_lowPriority"
      disabled={false}
      onClick={[MockFunction]}
      type="reset"
    >
      <span
        className="content"
      >
        Cancel
      </span>
    </button>
    <button
      className="root_highPriority"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      <span
        className="content"
      >
        Save
      </span>
    </button>
  </div>,
]
`;
